WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239895
IPC stream send is slow due to semaphore signal if receiver is faster than sender
https://bugs.webkit.org/show_bug.cgi?id=239895
Summary
IPC stream send is slow due to semaphore signal if receiver is faster than se...
Kimmo Kinnunen
Reported
2022-04-29 04:50:55 PDT
IPC stream send is slow due to semaphore signal if receiver is faster than sender
Attachments
Patch
(14.44 KB, patch)
2022-04-29 04:55 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-04-29 04:55:41 PDT
Created
attachment 458581
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2022-05-06 04:51:13 PDT
<
rdar://problem/92853930
>
Kimmo Kinnunen
Comment 3
2022-06-14 05:22:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1500
Kimmo Kinnunen
Comment 4
2022-06-20 04:34:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1637
EWS
Comment 5
2022-06-23 18:34:25 PDT
Committed
251815@main
(05cb01bde6d0): <
https://commits.webkit.org/251815@main
> Reviewed commits have been landed. Closing PR #1637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug