IPC stream send is slow due to semaphore signal if receiver is faster than sender https://bugs.webkit.org/show_bug.cgi?id=239895

Reviewed by NOBODY (OOPS!).

Avoid client signal() calls by marking the receiver as sleeping after a delay.
This should let the sender accrue more messages to the buffer without the signal.

WIP: no perf data yet, the numbers are just first guesses. Does not seem to
improve MM Canvas Lines on macOS AS Release.

No new tests, optimization.

* Source/WebKit/Platform/IPC/StreamConnectionWorkQueue.cpp:
(IPC::StreamConnectionWorkQueue::dispatch):
(IPC::StreamConnectionWorkQueue::addStreamConnection):
(IPC::StreamConnectionWorkQueue::removeStreamConnection):
(IPC::StreamConnectionWorkQueue::stopAndWaitForCompletion):
(IPC::StreamConnectionWorkQueue::startProcessingThread):
(IPC::StreamConnectionWorkQueue::processStreams):
* Source/WebKit/Platform/IPC/StreamConnectionWorkQueue.h:
* Source/WebKit/Platform/IPC/StreamServerConnection.cpp:
(IPC::StreamServerConnection::tryAcquire):
(IPC::StreamServerConnection::dispatchStreamMessages):
* Source/WebKit/Platform/IPC/StreamServerConnection.h: